added axios script to html, removed require from index.js to get images to populate

--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
-    <title>Open API</title>
+    <title>Cats</title>
 </head>
 <body>
+    <h1>Cat Images</h1>
+    <section id="cat">
+        <img id="catImage" src="" alt="Image of cat">
+        <button id="getCatImage">Click to get another cat image</button>
+    </section>
     
 
     <!-- Scripts-->
+     <!-- added axios cdn script, was unable to get it to work with it in index.js-->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
      <script src="js/index.js"></script>
 </body>
 </html>
