--- a/index.html
+++ b/index.html
@@ -7,12 +7,22 @@
     <title>Cats</title>
 </head>
 <body>
-    <h1>Cat Images</h1>
+    <nav>
+        <a href="#" id="catLink">Cat images</a>
+        <a href="#" id="breedsLink">Cat Breeds</a>
+    </nav>
+    <h1>Cat Images and Breeds</h1>
+    <!--Section to show cat images-->
     <section id="cat">
         <img id="catImage" src="" alt="Image of cat">
         <button id="getCatImage">Click to get another cat image</button>
     </section>
-    
+     <!--Section to show cat breeds-->
+     <section id="breeds" style="display: none;">
+        <h2>Cat Breeds</h2>
+        <input type="text" id="breedSearch" placeholder="Search for a breed">
+        <button id="breedsList"></div>
+     </section>
 
     <!-- Scripts-->
      <!-- added axios cdn script, was unable to get it to work with it in index.js-->
