fixing errors, trying to get breeds search button working

--- a/index.html
+++ b/index.html
@@ -11,17 +11,25 @@
         <a href="#" id="catLink">Cat images</a>
         <a href="#" id="breedsLink">Cat Breeds</a>
     </nav>
+
     <h1>Cat Images and Breeds</h1>
+
     <!--Section to show cat images-->
     <section id="cat">
         <img id="catImage" src="" alt="Image of cat">
         <button id="getCatImage">Click to get another cat image</button>
     </section>
+
      <!--Section to show cat breeds-->
      <section id="breeds" style="display: none;">
         <h2>Cat Breeds</h2>
+
+        <!-- search input to filter breeds -->
         <input type="text" id="breedSearch" placeholder="Search for a breed">
-        <button id="breedsList"></div>
+        <button id="searchBreedButton">Search</button>
+
+        <!-- div to display ist of breeds -->
+         <div id="breedsList"></div>
      </section>
 
     <!-- Scripts-->
