changing code to get stock image to show for error cats

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="#" id="breedsLink">Cat Breeds</a>
     </nav>
 
-    <h1>Cat Images and Breeds</h1>
+    <h1 id="pageTitle">Cat Images and Breeds</h1>
 
     <!--Section to show cat images-->
     <section id="cat">
@@ -28,7 +28,7 @@
 
     <!--Section to show cat breeds-->
     <section id="breeds">
-        <h2>Cat Breeds</h2>
+        <h2 id="breedsTitle">Cat Breeds</h2>
 
         <!-- search input to filter breeds -->
         <input type="text" id="breedSearch" placeholder="Search for a breed">
